--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CT Attendance</title>
+
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" 
+            integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+    <title>{% block title %}C.T. Attendance{% endblock title %}</title>
 </head>
 <body>
-    <main>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}"> Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            {% if user.is_authenticated %} 
+
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" id="userMenu"
+                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ user.username }}
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                       <li>
+                        <a class="dropdown-item"
+                        href="{% url 'password_change'%}">Change password</a>
+                       </li>
+                       <li><hr class="dropdown-divider"></li>
+                       <li>
+                        <a class="dropdown-item" href="{% url 'logout' %}">
+                            Log Out</a>
+                       </li>
+                    </ul>
+                </li>
+            </ul>
+            {% else %} 
+            <form class="form-inline ms-auto">
+                <a href="{% url 'login' %}" class="btn btn-outline-secondary">
+                Log In</a>
+                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">
+                Sign up</a>
+                </form>
+            {% endif %}
+        </div>
+        </div>
+    </nav>
+    <div class="container">
         {% block content %} 
-        {% endblock content %}
-    </main>
+        {% endblock content %} 
+    </div>
+
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
+    
 </body>
 </html>
