--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
     <p><a href="{% url 'logout' %}">Log Out</a></p>
 {% else %} 
     <p>You are not logged in</p>
-    <a href="{% url 'login' %}">Log In</a>
+    <a href="{% url 'login' %}">Log In</a> | 
     <a href="{% url 'signup' %}">Sign Up</a>
 {% endif %} 
 {% endblock content %} 
