--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,6 +8,6 @@
 <form action="" method="post">
     {% csrf_token %} 
     {{ form.as_p }}
-    <button type="submit">Log In</button>
+    <button class="btn btn-success ml-2" type="submit">Log In</button>
 </form>
 {% endblock content %} 
