added first list-view logic for individual attendance

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"> Home</a>
+            <a class="navbar-brand" href="{% url 'home' %}">CTAS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
