--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <style> .navbar a{
+        font-family: 'Ms Madi', cursive;
+    }
+    </style>
+
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" 
             integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
     <title>{% block title %}C.T. Attendance{% endblock title %}</title>
@@ -22,6 +27,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             {% if user.is_authenticated %} 
 
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    {% if user.is_superuser %} 
+                    <a class="nav-link active" aria-current="page" href="{% url 'attendance_list' %}">Attendance</a>
+                    {% else %}
+                    <a class="nav-link active" aria-current="page" href="{% url 'attendance_list' %}">My Attendance</a>
+                    {% endif %}
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'attendance_new' %}">+New</a>
+                  </li>
+            </ul>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" id="userMenu"
