--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <h1 class="display-4">Codrum Tech. Attendance System</h1>
     <p class="lead">CTAS is a website that processes students attendance</p>
     <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">
+        <a class="btn btn-primary btn-lg" href="{% url 'attendance_new' %}" role="button">
         Mark your attendance</a>
     </p>
 </div>
