added README and a nicer login page

--- a/templates/attendance_list.html
+++ b/templates/attendance_list.html
@@ -44,7 +44,7 @@
       </table>
       <br>
       {% if not user.is_superuser %}
-      <h3>You have {{ percentage_present }}% attendance complete</h3>
+      <!-- <h3>You have {{ percentage_present }}% attendance complete</h3> -->
       {% endif %} 
 
       {% else %}
