--- a/templates/home.html
+++ b/templates/home.html
@@ -4,13 +4,25 @@
 
 
 {% block content %} 
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="jumbotron">
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-7 text-center">
+
+        
+    
     <h1 class="display-4">Codrum Tech. Attendance System</h1>
-    <p class="lead">CTAS is a website that processes students attendance</p>
+    <p class="lead">CTAS is a Student Attendance System. Powered by Codrum Technologies</p>
     <p class="lead">
         <a class="btn btn-primary btn-lg" href="{% url 'attendance_new' %}" role="button">
         Mark your attendance</a>
     </p>
+</div>
+</div>
 </div>
 {% endblock content %} 
 
