--- a/templates/attendance_new.html
+++ b/templates/attendance_new.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %} 
-
+{% load crispy_forms_tags %} 
 
 {% block content %} 
     <h1>New Attendance</h1>
     <form action="" method="post">
         {% csrf_token %} 
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button class="btn btn-success ml-2" type="submit">Save</button>
     </form>
 {% endblock content %}
