--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,12 +2,33 @@
 
 {% block title %}Log In{% endblock title %} 
 
-
 {% block content %} 
-<h2>Log In</h2>
-<form action="" method="post">
-    {% csrf_token %} 
-    {{ form.as_p }}
-    <button class="btn btn-success ml-2" type="submit">Log In</button>
-</form>
+<div class="row justify-content-center mt-5">
+    <div class="col-md-5">
+        <h2>Log In</h2>
+    </div>
+</div>
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-5">
+        <form action="" method="post">
+            {% csrf_token %} 
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" class="form-control">
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" class="form-control">
+            </div>
+            <br>
+            <button class="btn btn-success" type="submit">Log In</button>
+        </form>
+        <hr>
+        <div class="text-center">
+            Need and account? <a href="{% url 'signup' %}">Sign Up here</a>
+        </div>
+    </div>
+</div>
+
 {% endblock content %} 
